@@ -21,6 +21,7 @@ TODO :
 	vm : threaded interpreter (gcc only)
 	vm : always use COMPACT_TABLE for objects
 	mod_neko : log some errors into apache log
+	neko+vm : added perf statistics hooks (-stats)
 
 2007-07-25 : 1.6.0
 	display error message when uncaught exception in neko thread
